refactor: Group 도메인 서비스 계층 내 빌더 패턴 제거
- joinGroupByInviteCode 메서드 내 MemberGroup 생성 로직을 정적 팩토리 메서드(create)로 변경
- 서비스 계층에 직접 노출된 엔티티 빌더를 캡슐화하여 코드 일관성 유지